--- a/SHISEIDO.html
+++ b/SHISEIDO.html
@@ -315,7 +315,7 @@
     </div>
     <div class="footer-foot">
       <p class="footer-logo">SHISEIDO</p>
-      <p class="footer-group_link">資生堂グループ企業情報</p>
+      <p class="footer-group_link">資生堂グループ企業情報リンク</p>
     </div>
   </footer>
 </html>
