--- a/SHISEIDO.html
+++ b/SHISEIDO.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
 
     <title>SHIESIDO THE STORE|資生堂</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="SHISEIDO.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/SHISEIDO.css" />
   </head>
   <body>
     <div class="wapper">
@@ -35,7 +35,7 @@
         </div>
         <div class="top-menu">
           <ul>
-            <li><a href="#">FLOOR GUIDE</a></li>
+            <li><a href="../HTML/T_flooa-guide.html">FLOOR GUIDE</a></li>
             <li><a href="#">NEWS&TOPICS</a></li>
             <li><a href="#">MEMBER PROGRAM</a></li>
             <li><a href="#">ABOUT AS</a></li>
