TOPICSページ追加

--- a/SHISEIDO.html
+++ b/SHISEIDO.html
@@ -5,6 +5,7 @@
 
     <title>SHIESIDO THE STORE|資生堂</title>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/footer.css"/>
     <link rel="stylesheet" href="css/SHISEIDO.css" />
   </head>
   <body>
@@ -36,8 +37,8 @@
         <div class="top-menu">
           <ul>
             <li><a href="../HTML/T_flooa-guide.html">FLOOR GUIDE</a></li>
-            <li><a href="#">NEWS&TOPICS</a></li>
-            <li><a href="#">MEMBER PROGRAM</a></li>
+            <li><a href="../HTML/T_article.html">NEWS&TOPICS</a></li>
+            <li><a href="../HTML/T_member-program.html">MEMBER PROGRAM</a></li>
             <li><a href="#">ABOUT AS</a></li>
             <li><a href="#">ACCESS</a></li>
           </ul>
@@ -170,7 +171,7 @@
                   <li class="bgc_pink">COUNSELING</li>
                 </ul>
                 <p class="message">
-                  ビューティカウンセラーによる、個室での美容レッスン。<br />
+                  ビューティカウンセラーによる、個室での美容レッスン。<br>
                   機器を使った分析をもとに、美しくなるためのテクニックを学びながら、身につけることができます。
                 </p>
                 <a href="#"> 詳しく見る </a>
