--- a/T_flooa-guide.html
+++ b/T_flooa-guide.html
@@ -5,13 +5,13 @@
 
     <title>FLLOR GUIDE|SHIESIDO THE STORE|資生堂</title>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/footer.css"/>
     <link rel="stylesheet" href="css/T_floa.css" />
   </head>
   <body>
     <header>
         <div class="header_menu-wrap">
-            <h1 class="title">SHISEIDO <br>
-            the STORE</h1>
+            <h1 class="title">SHISEIDO <br><span>the STORE</span> </h1>
             <ul class="header_menu">
                 <li><a href="#">ACSESS</a></li>
                 <li><a href="#">MENU</a></li>
@@ -32,7 +32,7 @@
         </div>
         <div class="section">
             <div class="section-inner">
-                <section class="floor4">
+                <section class="floor">
                     <header class="floor-map">
                         <h3>4F</h3>
                         <img src="../../Desktop/SHISEIDO/map_4F.png">
@@ -45,18 +45,162 @@
                     </header>
                     <div class="floor-square">
                         <div class="floorguide-square">
-                        <h4>PERSONAL BEAUTY SESSION</h4>
-                        <p>個室での美容レッスン</p>
-                        <div class="section-item">
-                          <img src="../../Desktop/SHISEIDO/service-item_1.jpg" />
-                            <div class="section-category">  
-                            <ul>
-                                <li class="bgc_green">LESSON</li>
-                                <li class="bgc_pink">COUNSELING</li>
-                            </ul>
-                            <a href="#"> 詳しく見る </a>
+                            <h4>PERSONAL BEAUTY SESSION</h4>
+                            <p>個室での美容レッスン</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/service-item_1.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_green">LESSON</li>
+                                        <li class="bgc_pink">COUNSELING</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
                             </div>
                         </div>
+                        <div class="floorguide-square">
+                            <h4>SHISEIDO THE TABLES</h4>
+                            <p>カフェ・イベントスペース/グッズ</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/SHISEIDO 4F-2.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_gray">LESSON</li>
+                                        <li class="bgc_blue">SHOPPING</li>
+                                        <li class="bgc_yellow">COUNSELING</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="floor">
+                    <header class="floor-map">
+                        <h3>3F</h3>
+                        <img src="../../Desktop/SHISEIDO/map_3F.png">
+                        <p class="section-text">
+                            ファッションショーでも活躍するアーティストが、
+                            お客さまの魅力を引き出すスタイルをご提案。
+                            ヘアメイクと合わせて、プロのフォトグラファーによる撮影も可能。<br>
+                            クレ・ド・ポー ボーテのサロンでは、ラグジュアリーなオールハンドのトリートメントをご堪能ください。
+                            <br>              
+                            クレ・ド・ポー ボーテのサロンでは、
+                            ラグジュアリーなオールハンドのトリートメントをご堪能ください。
+                        </p>
+                    </header>
+                    <div class="floor-square">
+                        <div class="floorguide-square">
+                            <h4>BEAUTY BOOST BAR&PHOTO STUDIO</h4>
+                            <p>ヘアメイクアップサロン＆フォトスタジオ</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/SHISEIDO 3F-1.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_papple">HAIR&MAKEUP</li>
+                                        <li class="bgc_lavender">PHOTO STUDIO</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="floorguide-square">
+                            <h4>ESPACE CLÉ DE PEAU BEAUTÉ</h4>
+                            <p>エステティックサロン</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/SHISEIDO 3F-2.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_blown">ESTHETIC</li>
+                                        <li class="bgc_pink">COUNSELING</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="floor">
+                    <header class="floor-map">
+                        <h3>2F</h3>
+                        <img src="../../Desktop/SHISEIDO/map_2F.png">
+                        <p class="section-text">
+                            伝統と創造の融合する世界観の中、スクエアテーブルでゆっくりとカウンセリングを受けながら、
+                            資生堂の化粧品をお試し・ご購入いただけるフロア。
+                            <br>              
+                            奥には、メンバー限定のプライベートサロンも。
+                        </p>
+                    </header>
+                    <div class="floor-square">
+                        <div class="floorguide-square">
+                            <h4>BEAUTY SQUARE2</h4>
+                            <p>化粧品・カウンセリング</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/SHISEIDO 2F-1.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_blue">SHOPPING</li>
+                                        <li class="bgc_pink">COUNSELING</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="floorguide-square">
+                            <h4>BEAUTY UP CABIN</h4>
+                            <p>メンバーズスキンケアサロン</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/SHISEIDO 2F-2.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_blown">ESTHETIC</li>
+                                        <li class="bgc_pink">COUNSELING</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="floor">
+                    <header class="floor-map">
+                        <h3>1F</h3>
+                        <img src="../../Desktop/SHISEIDO/map_1F.png">
+                        <p class="section-text">
+                            壁や天井いっぱいに広がる花椿のアートを楽しみながら、
+                            ブランド「SHISEIDO」「クレ・ド・ポー ボーテ」をご体感いただけるフロア。
+                            <br>              
+                            スタイリング・バーでは、BEAUTY BOOST BAR &amp; PHOTO STUDIOのサービスを一部体験できます。
+                        </p>
+                    </header>
+                    <div class="floor-square">
+                        <div class="floorguide-square">
+                            <h4>BEAUTY SQUARE1</h4>
+                            <p>化粧品</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/SHISEIDO 1F-1.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_blue">SHOPPING</li>
+                                        <li class="bgc_pink">COUNSELING</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="floorguide-square">
+                            <h4>STYLING BAR</h4>
+                            <p>ヘアメイクアップカウンター</p>
+                            <div class="section-item">
+                                <img src="../../Desktop/SHISEIDO/SHISEIDO 1F-2.jpg" />
+                                <div class="section-category">  
+                                    <ul>
+                                        <li class="bgc_papple">HERE&MAKEUP</li>
+                                        <li class="bgc_pink">COUNSELING</li>
+                                    </ul>
+                                    <a href="#"> 詳しく見る </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -64,3 +208,30 @@
         </div>
     </main>
   </body>
+  <footer>
+    <div class="footer-warp">
+      <div class="footer-item">
+        <p>Follow us</p>
+        <ul>
+          <li>F</li>
+          <li>T</li>
+          <li>I</li>
+        </ul>
+      </div>
+      <div class="footer-item_lang">
+        <p>Language</p>
+        <ul class="footer-language">
+          <li><a href="#">ENGLISH</a></li>
+          <li><a href="#">简体中文</a></li>
+        </ul>
+        <div class="footer-bottom_link">
+          <a href="#">利用規約</a>
+          <a href="#">個人情報について</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-foot">
+      <p class="footer-logo">SHISEIDO</p>
+      <p class="footer-group_link">資生堂グループ企業情報</p>
+    </div>
+  </footer>
