元に戻した

--- a/SHISEIDO.html
+++ b/SHISEIDO.html
@@ -21,7 +21,7 @@
         </header>
         <div class="top_icon">
           <img
-            src="<?php bloginfo('template_url')?>/SHISEIDO/images/TOP.jpg"
+            src="images/TOP.jpg"
             title="tubaki_icon"
           />
         </div>
